Jackson Maven dependencies changes; add Windows jpackage command lines;